--- a/week01/index.html
+++ b/week01/index.html
@@ -4,18 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>나의 첫번째 웹페이지</title>
+    <title>Week 01 Homework(poem)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 브라우저 기본 스타일을 reset합니다 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-    <!-- index.html 페이지에 적용할 스타일시트로 main.css로 연결합니다 -->
     <link rel="stylesheet" href="./css/main.css" />
-
+ 
 </head>
 
 <body>
-    <p onclick="popAlert()">Hello, World!</p>
-    <script src="./js/index.js"></script>
+    <section class="poem">
+        <section class="head" onclick="alertPoet()">
+            <p id="title">그 복숭아나무 곁으로</p>
+        </section>
+        <script src="./js/index.js"></script>
+        <section class="text">
+            <section class="caluse">
+                <p>너무도 여러 겹의 마음을 가진</p>
+                <p>그 복숭아나무 곁으로</p>
+                <p>나는 왠지 가까이 가고 싶지 않았습니다</p>
+                <p>흰 꽃과 분홍 꽃을 나란히 피우고 서 있는 그 나무는 아마</p>
+                <p>사람이 앉지 못할 그늘을 가졌을 거라고</p>
+                <p>멀리로 멀리로만 지나쳤을 뿐입니다</p>
+                <p>흰 꽃과 분홍 꽃 사이에 수천의 빛깔이 있다는 것을</p>
+                <p>나는 그 나무를 보고 멀리서 알았습니다</p>
+                <p>눈부셔 눈부셔 알았습니다</p>
+                <p>피우고 싶은 꽃빛이 너무 많은 그 나무는</p>
+                <p>그래서 외로웠을 것이지만 외로운 줄도 몰랐을 것입니다</p>
+                <p>그 여러 겹의 마음을 읽는 데 참 오래 걸렸습니다</p>
+            </section>
+            <section class="caluse">
+                <p>흩어진 꽃잎들 어디 먼 데 닿았을 무렵</p>
+                <p>조금은 심심한 얼굴을 하고있는 그 복숭아나무 그늘에서</p>
+                <p>가만히 들었습니다 저녁이 오는 소리를</p>
+            </section>
+        </section>
+    </section>
 </body>
 
 
