--- a/멜론클론/index.html
+++ b/멜론클론/index.html
@@ -7,14 +7,16 @@
     <!-- 뷰포트 렌더링 방식 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 페이지 제목 설정 -->
-    <title>멜론</title>
+    <title>Melon::음악이 필요한 순간, 멜론</title>
     <!-- 파비콘(favorite icon) 설정 -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <!-- 각 브라우저의 기본 스타일을 초기화 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <!-- 구글 폰트: main.css보다 먼저 불러올 수 있도록 한다 -->
+    <!-- 구글 폰트: main.css보다 먼저 불러올 수 있도록 함 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
+    <!-- Google material Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- main.css -->
     <link rel="stylesheet" href="./css/main.css">
 
@@ -22,6 +24,8 @@
 </head>
 
 <body>
+
+    <!-- 헤더 -->
     <header>
         <!-- 1. 서브메뉴 -->
         <div class="header1">
@@ -46,15 +50,58 @@
             </ul>
         </div>
 
-        <div class="header1_border">
+
+    <div class="header1_border">
+
         </div>
 
         <!-- 2. 중간메뉴 -->
         <div class="header2">
-            <h1>
-                <img src="images/멜론2.png" width="140" height="45">
-            </h1>
-        </div>
+            
+            <ul class="header2_left1">
+                <img src="images/멜론2.png" alt="로고">
+            </ul>
+
+
+            <!-- 검색창 -->
+            <div class ="header2_left2">
+                <input id="search" placeholder="검색어를 입력하세요" />
+                <!-- 검색 아이콘 -->
+                <span class="material-icons">
+                    search
+                </span>
+            </div>
+
+            <!-- 급상승 -->
+            <ul class="header2_right1">
+                <img src="images/멜론4.png">
+            </ul>
+
+            <!-- 급상승차트 -->
+            <div class="header2_right2">슬라이드차트</div>
+            <div class="chart">
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                    <li>10</li>
+                    <li>더보기</li>
+                </ul>    
+
+            </div>
+
+            <!-- 광고,이벤트창 -->
+            <div class="header2_right3">
+
+            </div>
+
+       </div>   
 
         <!-- 3. 하단메뉴 -->
         <div class="header3">
@@ -96,9 +143,29 @@
         </div>
 
         <div class="header3_border">
+
+
         </div>
     
     </header>
+
+
+    <!-- 메인 -->
+    <main>
+
+    </main>
+
+
+
+
+
+
+
+
+    <!-- 푸터 -->
+    <footer>
+
+    </footer>
 
 </body>
 </html>
