--- a/멜론클론/index.html
+++ b/멜론클론/index.html
@@ -152,18 +152,61 @@
 
     <!-- 메인 -->
     <main>
+        <div id="contents">
+            <!-- 최신앨범 -->
+            <div class="newalbum">
+
+            </div>
+            
+            <!-- 광고배너 -->
+            <div class="promotion">
+
+            </div>
+
+            <!-- 로그인버튼 -->
+            <div class="login">
+
+            </div>
+
+            <!-- 이벤트배너 -->
+            <div class="event">
+
+            </div>
+
+            <!-- 인기컨텐츠 -->
+            <div class="hottrend">
+
+            </div>
+
+            <!-- 멜론차트 -->
+            <div class="melonchart">
+
+            </div>
+
+        </div>
+
+        <div id="notice">
+
+
+        </div>
 
     </main>
 
 
 
-
-
-
-
-
     <!-- 푸터 -->
     <footer>
+        <div class="footer_menu1">
+
+        </div>
+
+        <div class="footer_menu2">
+
+        </div>
+
+        <div class="info">
+
+        </div>
 
     </footer>
 
